--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Test QDYN (conda)
+name: Test QDYN
 
 on: [push]
 
@@ -15,14 +15,8 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: 3.7
-    - name: Add conda to system path
-      run: |
-        # $CONDA is an environment variable pointing to the root of the miniconda directory
-        echo $CONDA/bin >> $GITHUB_PATH
     - name: Install dependencies
       run: |
-        # conda env update --file environment.yml --name base
-        # conda install --yes numpy scipy matplotlib pandas termcolor
         pip install numpy scipy matplotlib pandas termcolor ipython
         pip install -e .
     - name: Install compiler
